--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 Flask==2.0.2
-requests==2.27.1  # Update to a compatible version with streamlit
+requests==2.27.1  # Make sure to have a compatible version of requests
 openai==0.27.0
-werkzeug==2.0.3
