--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Flask==2.0.2
-requests==2.27.1  # Make sure to have a compatible version of requests
+requests==2.27.1
 openai==0.27.0
+werkzeug==2.0.3  # Ensure compatibility
