--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 Flask==2.0.2
-requests==2.27.1
+requests==2.27.1  # Ensure compatibility with other packages
 openai==0.27.0
-werkzeug==2.0.3  # Ensure compatibility
