Add opencensus-ext-azure and update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,34 @@
-Flask==2.0.2
+azure-core==1.24.2
+azure-identity==1.10.0
+cachetools==4.2.4
+certifi==2024.2.2
+cffi==1.15.1
+charset-normalizer==2.0.12
+contextvars==2.4
+cryptography==40.0.2
+google-api-core==2.8.2
+google-auth==2.22.0
+googleapis-common-protos==1.56.3
+idna==3.7
+immutables==0.19
+importlib-resources==5.4.0
+msal==1.27.0
+msal-extensions==1.0.0
+openai==0.8.0
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.13
+portalocker==2.7.0
+protobuf==3.19.6
+psutil==5.9.8
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.4.0
 requests==2.27.1
-openai==0.27.0
-gunicorn
+rsa==4.9
+six==1.16.0
+tqdm==4.64.1
+typing_extensions==4.1.1
+urllib3==1.26.18
+zipp==3.6.0
